# inames

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ESSAY.md  HOMEBREW_TAP_SETUP.md  LICENSE-APACHE  LICENSE-MIT  README.md  TEMPLATE_USAGE.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: inames.rb
data/: adjectives.txt  nouns.txt
homebrew/: README.md
scripts/: process_names.py
src/: lib.rs  main.rs
