[package]
name = "inames"
version = "0.1.0"
edition = "2024"
authors = ["Hamze ghalebi@gmail.com"]
license = "MIT OR Apache-2.0"
description = "Inclusive multicultural random name generator with Persian, Arabic, and Asian names"
repository = "https://github.com/hamzeghalebi/inames"
keywords = ["inames", "inclusive", "generator", "multicultural", "persian"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = { version = "1.0.98", features = ["default"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rand = "0.8"
rig-core = { version = "0.12.0" }
schemars = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "inames"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.4"
